# Automagerie

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: model_addition.md
.github/workflows/: build.yml
motion_generator/: gait_generator.py  gait_playground.py  placo_walk_engine.py
motion_generator/templates/: index.html
robots/bdx_r/: README.md  auto_gait.json  bdx_r.urdf  bdx_r.xml  placo_defaults.json  scene.xml
robots/bdx_r/assets/: Antenna.stl  AntennaBox.stl  BackCover.stl  BackFrame.stl  Battery.stl  BottomCover.stl  FrontCover.stl  IMU_Mount.stl  (+53 more)
robots/brom_bdx/: CHANGELOG.md  README.md  auto_gait.json  brom_bdx.urdf  brom_bdx.xml  placo_defaults.json  scene.xml
robots/go_bdx/: CHANGELOG.md  README.md  go_bdx.urdf  go_bdx.xml  placo_defaults.json  scene.xml
robots/hopejr/: auto_gait.json  config.json  hopejr.urdf  placo_defaults.json
robots/mini_v2/: CHANGELOG.md  README.md  auto_gait.json  mini_v2.urdf  mini_v2.xml  placo_defaults.json  scene.xml
robots/q1mini/: CHANGELOG.md  LICENSE  README.md  placo_defaults.json  q1mini.urdf  q1mini.xml  scene.xml
robots/sigmaban/: CHANGELOG.md  README.md  auto_gait.json  placo_defaults.json  scene.xml  sigmaban.urdf
robots/uki_bdx/: CHANGELOG.md  README.md  placo_defaults.json  scene.xml  uki_bdx.urdf  uki_bdx.xml
scripts/: auto_waddle.py  check_collisions.py  fit_poly.py  generate_assets.py  poly_reference_motion_numpy.py  ref_motion_viewer.py  replay_motion.py
test/: model_test.py
(+238 files in other folders)
